--- a/app/src/main/res/layout/home_04.xml
+++ b/app/src/main/res/layout/home_04.xml
@@ -158,7 +158,7 @@
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/home_04__re"
+            android:id="@+id/home_04_re"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="5dp"
