--- a/app/src/main/res/layout/home_04_friendlist_re.xml
+++ b/app/src/main/res/layout/home_04_friendlist_re.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/home_04_friend_cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/home_04_friend_profile"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginStart="15dp"
@@ -19,39 +20,40 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:src="@mipmap/ic_launcher_round" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/home_04_friend_nick"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
             android:text="상대방 닉네임"
-            app:layout_constraintBottom_toTopOf="@+id/textView16"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/home_04_friend_id"
+            app:layout_constraintStart_toEndOf="@+id/home_04_friend_profile"
+            app:layout_constraintTop_toTopOf="@+id/home_04_friend_profile"
             app:layout_constraintVertical_chainStyle="spread_inside" />
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/home_04_friend_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="5dp"
             android:text="상대방 아이디"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_friend_profile"
+            app:layout_constraintStart_toStartOf="@+id/home_04_friend_nick"
+            app:layout_constraintTop_toBottomOf="@+id/home_04_friend_nick" />
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/home_04_friend_invite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:buttonTint="@color/mybrary_main"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_friend_profile"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView" />
+            app:layout_constraintTop_toTopOf="@+id/home_04_friend_profile" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
