--- a/app/src/main/res/layout/home_04_re.xml
+++ b/app/src/main/res/layout/home_04_re.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/home_04_friend_profile"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
@@ -19,16 +19,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:src="@mipmap/ic_launcher_round" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/home_04_friend_nick"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:text="상대방 아이디"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView" />
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_friend_profile"
+            app:layout_constraintStart_toEndOf="@+id/home_04_friend_profile"
+            app:layout_constraintTop_toTopOf="@+id/home_04_friend_profile" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
