--- a/app/src/main/res/layout/home_04_chatting.xml
+++ b/app/src/main/res/layout/home_04_chatting.xml
@@ -15,6 +15,7 @@
         android:layout_weight="1.5"
         android:background="@color/trans"
         android:scaleType="fitCenter"
+        android:src="@drawable/back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@drawable/back" />
@@ -29,7 +30,7 @@
         android:layout_marginEnd="10dp"
         android:layout_weight="5"
         android:gravity="center"
-        android:text="Send Message"
+        android:text="User_Nick_Name"
         android:textAlignment="center"
         android:textColor="@color/mybrary_main"
         android:textSize="18sp"
@@ -48,9 +49,9 @@
         android:layout_weight="2"
         android:background="@color/trans"
         android:scaleType="fitCenter"
+        android:src="@drawable/menu_00"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/menu_00" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view20"
