--- a/app/src/main/res/layout/home_04_friendlist.xml
+++ b/app/src/main/res/layout/home_04_friendlist.xml
@@ -19,12 +19,12 @@
             android:id="@+id/home_04_friendlist_back_B"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_weight="1.5"
             android:background="@color/trans"
             android:scaleType="fitCenter"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.02"
+            android:src="@drawable/back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@drawable/back" />
@@ -39,7 +39,7 @@
             android:layout_marginEnd="8dp"
             android:layout_weight="5"
             android:gravity="center"
-            android:text="Send Message"
+            android:text="Friend List"
             android:textAlignment="center"
             android:textColor="@color/mybrary_main"
             android:textSize="18sp"
@@ -54,14 +54,13 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="2"
             android:background="@color/trans"
             android:scaleType="fitCenter"
+            android:src="@drawable/paper_plane"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.98"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/paper_plane" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/view8"
