--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -6,13 +6,14 @@
     android:layout_height="wrap_content">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/home_04_chatting_re"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/home_04_chat_profile"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:src="@mipmap/ic_launcher_round"
@@ -31,7 +32,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline25"
             app:layout_constraintStart_toEndOf="@+id/home_04_chat_profile"
-            app:layout_constraintTop_toTopOf="@+id/home_04_chat_profile" />
+            app:layout_constraintTop_toBottomOf="@+id/home_04_chat_nick" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline25"
@@ -39,5 +40,36 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.7" />
+
+        <TextView
+            android:id="@+id/home_04_chat_nick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@+id/home_04_chat_main"
+            app:layout_constraintTop_toTopOf="@+id/home_04_chat_profile" />
+
+        <TextView
+            android:id="@+id/home_04_chat_main_me"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="10dp"
+            android:text="TextView"
+            android:textAlignment="textEnd"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline26"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline26"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.3" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
