--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -8,6 +9,17 @@
         android:id="@+id/home_04_chatting_re"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/time_you"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="TextView"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_chat_main"
+            app:layout_constraintStart_toEndOf="@+id/home_04_chat_main"
+            app:layout_constraintTop_toTopOf="@+id/home_04_chat_main" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/home_04_chat_profile"
@@ -25,11 +37,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
+            android:background="@drawable/chat_you"
+            android:maxWidth="200dp"
+            android:padding="5dp"
             android:text="상대방 채팅"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline25"
             app:layout_constraintStart_toEndOf="@+id/home_04_chat_profile"
             app:layout_constraintTop_toBottomOf="@+id/home_04_chat_nick" />
 
@@ -51,17 +64,18 @@
 
         <TextView
             android:id="@+id/home_04_chat_main_me"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
+            android:background="@drawable/all_stroke"
+            android:maxWidth="200dp"
+            android:padding="5dp"
             android:text="TextView"
-            android:textAlignment="textEnd"
+            android:textAlignment="textStart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline26"
             app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.constraint.Guideline
@@ -70,5 +84,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.3" />
+
+        <TextView
+            android:id="@+id/time_me"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:text="TextView"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_chat_main_me"
+            app:layout_constraintEnd_toStartOf="@+id/home_04_chat_main_me"
+            app:layout_constraintTop_toTopOf="@+id/home_04_chat_main_me" />
     </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
