--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,7 @@
     <color name="yellow">#FFFF00</color>
     <color name="navy">#08088A</color>
     <color name="mybrary_main">#e47700</color>
+    <color name="chat_you">#E6E6E6</color>
+
 
 </resources>
