--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="100dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_04_chatting_re"
@@ -35,7 +35,7 @@
             android:id="@+id/home_04_chat_main"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="60dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/chat_you"
@@ -43,7 +43,7 @@
             android:padding="5dp"
             android:text="상대방 채팅"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/home_04_chat_profile"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/home_04_chat_nick" />
 
         <android.support.constraint.Guideline
