--- a/app/src/main/res/drawable/chat_me.xml
+++ b/app/src/main/res/drawable/chat_me.xml
@@ -9,9 +9,9 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="@color/trans" />
+                android:color="@color/mybrary_main" />
             <corners android:radius="12dp"/>
-            <solid android:color="@color/chat_you" />
+            <solid android:color="@color/trans" />
         </shape>
 
     </item>
