--- a/app/src/main/res/layout/home_04_chatting.xml
+++ b/app/src/main/res/layout/home_04_chatting.xml
@@ -77,26 +77,30 @@
         android:id="@+id/home_04_chatting_ET"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="7dp"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/mybrary_main"
+        android:background="@drawable/chat_me"
+        android:backgroundTint="@color/default1"
         android:hint="메세지를 입력해주세요."
         android:inputType="textMultiLine"
         android:maxHeight="120dp"
+        android:padding="7dp"
+        android:paddingStart="7dp"
+        android:paddingEnd="7dp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/home_04_chatting_send"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/home_04_chatting_camera" />
 
     <ImageView
         android:id="@+id/home_04_chatting_send"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/home_04_chatting_ET"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/home_04_chatting_nick"
         app:srcCompat="@drawable/paper_plane" />
 
     <android.support.v7.widget.RecyclerView
@@ -111,5 +115,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view20" />
+
+    <ImageView
+        android:id="@+id/home_04_chatting_camera"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toBottomOf="@+id/home_04_chatting_ET"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/camera" />
 
 </android.support.constraint.ConstraintLayout>
