--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -15,11 +15,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="TextView"
+            android:layout_marginBottom="3dp"
+            android:text="몇시 몇분"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@+id/home_04_chat_main"
-            app:layout_constraintStart_toEndOf="@+id/home_04_chat_main"
-            app:layout_constraintTop_toTopOf="@+id/home_04_chat_main" />
+            app:layout_constraintStart_toEndOf="@+id/home_04_chat_main" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/home_04_chat_profile"
@@ -40,7 +40,9 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/chat_you"
             android:maxWidth="200dp"
-            android:padding="5dp"
+            android:padding="7dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="상대방 채팅"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,9 +71,11 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/all_stroke"
+            android:background="@drawable/chat_me"
             android:maxWidth="200dp"
-            android:padding="5dp"
+            android:padding="7dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="TextView"
             android:textAlignment="textStart"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -90,10 +94,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
+            android:layout_marginBottom="3dp"
             android:text="TextView"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@+id/home_04_chat_main_me"
-            app:layout_constraintEnd_toStartOf="@+id/home_04_chat_main_me"
-            app:layout_constraintTop_toTopOf="@+id/home_04_chat_main_me" />
+            app:layout_constraintEnd_toStartOf="@+id/home_04_chat_main_me" />
+
+        <TextView
+            android:id="@+id/home_04_chat_read"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="1"
+            android:textColor="@color/mybrary_main"
+            android:textSize="8sp"
+            app:layout_constraintStart_toStartOf="@+id/time_you"
+            app:layout_constraintTop_toTopOf="@+id/home_04_chat_main" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
