--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -101,14 +101,26 @@
             app:layout_constraintEnd_toStartOf="@+id/home_04_chat_main_me" />
 
         <TextView
-            android:id="@+id/home_04_chat_read"
+            android:id="@+id/home_04_chat_read_you"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="1"
+            android:layout_marginBottom="1dp"
+            android:text="0"
             android:textColor="@color/mybrary_main"
             android:textSize="8sp"
-            app:layout_constraintStart_toStartOf="@+id/time_you"
-            app:layout_constraintTop_toTopOf="@+id/home_04_chat_main" />
+            app:layout_constraintBottom_toTopOf="@+id/time_you"
+            app:layout_constraintStart_toStartOf="@+id/time_you" />
+
+        <TextView
+            android:id="@+id/home_04_chat_read_me"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:text="0"
+            android:textColor="@color/mybrary_main"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toTopOf="@+id/time_me"
+            app:layout_constraintEnd_toEndOf="@+id/time_me" />
+
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
