--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/home_04_chatting_re"
+        android:id="@+id/home_04_chatting_re_you"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/home_04_chat_main"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
             android:layout_marginTop="5dp"
@@ -47,13 +47,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/home_04_chat_nick" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline25"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.7" />
-
         <TextView
             android:id="@+id/home_04_chat_nick"
             android:layout_width="wrap_content"
@@ -62,6 +55,49 @@
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="@+id/home_04_chat_main"
             app:layout_constraintTop_toTopOf="@+id/home_04_chat_profile" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline26"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.3" />
+
+        <TextView
+            android:id="@+id/home_04_chat_read_you"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:text="0"
+            android:textColor="@color/mybrary_main"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toTopOf="@+id/time_you"
+            app:layout_constraintStart_toStartOf="@+id/time_you" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/home_04_chatting_re_me"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline25"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.7" />
+
+        <TextView
+            android:id="@+id/time_me"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="3dp"
+            android:text="TextView"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_chat_main_me"
+            app:layout_constraintEnd_toStartOf="@+id/home_04_chat_main_me" />
 
         <TextView
             android:id="@+id/home_04_chat_main_me"
@@ -80,35 +116,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline26"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.3" />
-
-        <TextView
-            android:id="@+id/time_me"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="3dp"
-            android:text="TextView"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toBottomOf="@+id/home_04_chat_main_me"
-            app:layout_constraintEnd_toStartOf="@+id/home_04_chat_main_me" />
-
-        <TextView
-            android:id="@+id/home_04_chat_read_you"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:text="0"
-            android:textColor="@color/mybrary_main"
-            android:textSize="8sp"
-            app:layout_constraintBottom_toTopOf="@+id/time_you"
-            app:layout_constraintStart_toStartOf="@+id/time_you" />
-
         <TextView
             android:id="@+id/home_04_chat_read_me"
             android:layout_width="wrap_content"
@@ -119,6 +126,6 @@
             android:textSize="8sp"
             app:layout_constraintBottom_toTopOf="@+id/time_me"
             app:layout_constraintEnd_toEndOf="@+id/time_me" />
-
     </android.support.constraint.ConstraintLayout>
+
 </android.support.constraint.ConstraintLayout>
