--- a/app/src/main/res/layout/home_04_friendlist_re.xml
+++ b/app/src/main/res/layout/home_04_friendlist_re.xml
@@ -48,12 +48,15 @@
 
         <CheckBox
             android:id="@+id/home_04_friend_invite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:buttonTint="@color/mybrary_main"
-            app:layout_constraintBottom_toBottomOf="@+id/home_04_friend_profile"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/home_04_friend_profile" />
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
