--- a/app/src/main/res/layout/home_02_02.xml
+++ b/app/src/main/res/layout/home_02_02.xml
@@ -64,8 +64,10 @@
         android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view18">
+        app:layout_constraintTop_toBottomOf="@+id/view18"
+        app:layout_constraintVertical_bias="0.100000024">
 
         <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -117,7 +119,7 @@
                 android:layout_width="200dp"
                 android:layout_height="300dp"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginEnd="5dp"
                 android:background="@color/trans"
                 android:clickable="true"
@@ -211,17 +213,19 @@
             <Button
                 android:id="@+id/home_02_02_remove_B"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="30dp"
                 android:background="@drawable/all_stroke"
                 android:text="삭제하기"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline24"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline23"
-                app:layout_constraintTop_toBottomOf="@+id/home_02_02_main" />
+                app:layout_constraintTop_toBottomOf="@+id/home_03_like_text"
+                app:layout_constraintVertical_bias="1.0" />
 
             <Button
                 android:id="@+id/home_03_view_Follow"
@@ -233,6 +237,30 @@
                 app:layout_constraintBottom_toBottomOf="@+id/wright_user_nick"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/wright_user_nick" />
+
+            <ImageView
+                android:id="@+id/home_03_like_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view15"
+                app:srcCompat="@drawable/home_03_selector" />
+
+            <TextView
+                android:id="@+id/home_03_like_text"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/all_stroke"
+                android:gravity="center"
+                android:text="좋아요 10개"
+                app:layout_constraintEnd_toStartOf="@+id/guideline24"
+                app:layout_constraintStart_toStartOf="@+id/guideline23"
+                app:layout_constraintTop_toBottomOf="@+id/home_02_02_main" />
 
 
         </android.support.constraint.ConstraintLayout>
