--- a/app/src/main/res/layout/home_02_02.xml
+++ b/app/src/main/res/layout/home_02_02.xml
@@ -232,7 +232,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/all_stroke"
+                android:background="@drawable/selector_follower"
+                android:textColor="@color/white"
                 android:text="팔로우"
                 app:layout_constraintBottom_toBottomOf="@+id/wright_user_nick"
                 app:layout_constraintEnd_toEndOf="parent"
