--- a/app/src/main/res/layout/home_02_follower.xml
+++ b/app/src/main/res/layout/home_02_follower.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/home_04_friend_cardview"
+    android:id="@+id/home_02_follower_cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/home_04_friend_profile"
+            android:id="@+id/home_02_follower_profile"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginStart="15dp"
@@ -23,49 +23,52 @@
             android:src="@mipmap/ic_launcher_round" />
 
         <TextView
-            android:id="@+id/home_04_friend_nick"
+            android:id="@+id/home_02_follower_nick"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="10dp"
             android:maxLines="1"
             android:text="상대방 닉네임"
             android:textAlignment="textStart"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/home_04_friend_id"
-            app:layout_constraintEnd_toStartOf="@+id/home_04_friend_invite"
-            app:layout_constraintStart_toEndOf="@+id/home_04_friend_profile"
-            app:layout_constraintTop_toTopOf="@+id/home_04_friend_profile"
+            app:layout_constraintBottom_toTopOf="@+id/home_02_follower_id"
+            app:layout_constraintEnd_toStartOf="@+id/home_02_follower_B"
+            app:layout_constraintStart_toEndOf="@+id/home_02_follower_profile"
+            app:layout_constraintTop_toTopOf="@+id/home_02_follower_profile"
             app:layout_constraintVertical_chainStyle="spread_inside" />
 
         <TextView
-            android:id="@+id/home_04_friend_id"
+            android:id="@+id/home_02_follower_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="5dp"
             android:maxLines="1"
             android:text="상대방 아이디"
             android:textAlignment="textStart"
-            app:layout_constraintBottom_toBottomOf="@+id/home_04_friend_profile"
-            app:layout_constraintEnd_toStartOf="@+id/home_04_friend_invite"
-            app:layout_constraintStart_toStartOf="@+id/home_04_friend_nick"
-            app:layout_constraintTop_toBottomOf="@+id/home_04_friend_nick" />
+            app:layout_constraintBottom_toBottomOf="@+id/home_02_follower_profile"
+            app:layout_constraintEnd_toStartOf="@+id/home_02_follower_B"
+            app:layout_constraintStart_toStartOf="@+id/home_02_follower_nick"
+            app:layout_constraintTop_toBottomOf="@+id/home_02_follower_nick" />
 
-        <CheckBox
-            android:id="@+id/home_04_friend_invite"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:buttonTint="@color/mybrary_main"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <Button
+            android:id="@+id/home_02_follower_B"
+            android:layout_width="80dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/selector_follower"
+            android:text="팔로우"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/home_02_follower_profile"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/home_02_follower_profile" />
+
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
