--- a/app/src/main/res/layout/home_04.xml
+++ b/app/src/main/res/layout/home_04.xml
@@ -31,7 +31,7 @@
             tools:srcCompat="@drawable/menu_00" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/home_04_friendlist_title"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_gravity="center"
