--- a/app/src/main/res/layout/home_04_friendlist.xml
+++ b/app/src/main/res/layout/home_04_friendlist.xml
@@ -30,13 +30,13 @@
             tools:srcCompat="@drawable/back" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/home_04_friendlist_title"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_gravity="center"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="5"
             android:gravity="center"
             android:text="Friend List"
@@ -45,8 +45,8 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:typeface="serif"
-            app:layout_constraintEnd_toStartOf="@+id/home_04_friend_send"
-            app:layout_constraintStart_toEndOf="@+id/home_04_friendlist_back_B"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
