--- a/app/src/main/res/layout/home_00_my_info.xml
+++ b/app/src/main/res/layout/home_00_my_info.xml
@@ -219,5 +219,16 @@
         app:layout_constraintStart_toStartOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
+    <ProgressBar
+        android:id="@+id/my_info_progress"
+        style="@style/SpinKitView.Large.FadingCircle"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toBottomOf="@+id/my_info_profile"
+        app:layout_constraintEnd_toEndOf="@+id/my_info_profile"
+        app:layout_constraintStart_toStartOf="@+id/my_info_profile"
+        app:layout_constraintTop_toTopOf="@+id/my_info_profile"/>
+
+
 
 </android.support.constraint.ConstraintLayout>
