--- a/app/src/main/res/layout/home_00_my_info.xml
+++ b/app/src/main/res/layout/home_00_my_info.xml
@@ -219,16 +219,16 @@
         app:layout_constraintStart_toStartOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
-    <ProgressBar
+    <com.github.ybq.android.spinkit.SpinKitView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/my_info_progress"
         style="@style/SpinKitView.Large.FadingCircle"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         app:layout_constraintBottom_toBottomOf="@+id/my_info_profile"
         app:layout_constraintEnd_toEndOf="@+id/my_info_profile"
         app:layout_constraintStart_toStartOf="@+id/my_info_profile"
-        app:layout_constraintTop_toTopOf="@+id/my_info_profile"/>
-
-
+        app:layout_constraintTop_toTopOf="@+id/my_info_profile"
+        app:SpinKit_Color="@color/colorAccent"/>
 
 </android.support.constraint.ConstraintLayout>
