--- a/app/src/main/res/layout/home_02_01.xml
+++ b/app/src/main/res/layout/home_02_01.xml
@@ -87,6 +87,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/home_02_default" />
 
+            <com.github.ybq.android.spinkit.SpinKitView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/my_info_progress"
+                style="@style/SpinKitView.Large.FadingCircle"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                app:layout_constraintBottom_toBottomOf="@+id/home_02_01_book_image"
+                app:layout_constraintEnd_toEndOf="@+id/home_02_01_book_image"
+                app:layout_constraintStart_toStartOf="@+id/home_02_01_book_image"
+                app:layout_constraintTop_toTopOf="@+id/home_02_01_book_image"
+                app:SpinKit_Color="@color/colorAccent"/>
+
             <EditText
                 android:id="@+id/home_02_01_book_name"
                 android:layout_width="0dp"
