--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="yellow">#FFFF00</color>
     <color name="navy">#08088A</color>
     <color name="mybrary_main">#e47700</color>
+    <color name="friend_search">#F2F2F2</color>
     <color name="chat_you">#E6E6E6</color>
 
 
