--- a/app/src/main/res/layout/home_04_friendlist.xml
+++ b/app/src/main/res/layout/home_04_friendlist.xml
@@ -74,15 +74,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <SearchView
-            android:id="@+id/home_04_friend_search"
+        <EditText
+            android:id="@+id/home_04_friend_search_ET"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="5dp"
-            android:background="@drawable/chat_you"
+            android:background="@drawable/friendlist_search"
+            android:hint="친구 검색"
+            android:maxLength="12"
+            android:inputType="text"
+            android:paddingStart="40dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view8" />
 
@@ -98,7 +103,33 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home_04_friend_search" />
+            app:layout_constraintTop_toBottomOf="@+id/home_04_friend_search_ET" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="30dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_friend_search_ET"
+            app:layout_constraintStart_toStartOf="@+id/home_04_friend_search_ET"
+            app:layout_constraintTop_toTopOf="@+id/home_04_friend_search_ET"
+            app:srcCompat="@drawable/search" />
+
+        <Button
+            android:id="@+id/home_04_friend_search_B"
+            android:layout_width="70dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="@color/trans"
+            android:text="검색"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_friend_search_ET"
+            app:layout_constraintEnd_toEndOf="@+id/home_04_friend_search_ET"
+            app:layout_constraintTop_toTopOf="@+id/home_04_friend_search_ET"
+            app:layout_constraintVertical_bias="1.0" />
 
     </android.support.constraint.ConstraintLayout>
 
