--- a/app/src/main/res/layout/chat_drawer.xml
+++ b/app/src/main/res/layout/chat_drawer.xml
@@ -47,7 +47,7 @@
             app:layout_constraintGuide_percent=".4" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/chat_drawer_RE"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="5dp"
