--- a/app/src/main/res/layout/home_01.xml
+++ b/app/src/main/res/layout/home_01.xml
@@ -167,10 +167,12 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/chat_bot_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="15dp"
+            android:background="@drawable/chat_bot_back"
+            android:padding="7dp"
             android:clickable="true"
             android:src="@drawable/chat_bot"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
