--- a/app/src/main/res/layout/home_03.xml
+++ b/app/src/main/res/layout/home_03.xml
@@ -168,6 +168,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view7" />
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/chat_bot_button3"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/chat_bot_back"
+            android:padding="7dp"
+            android:clickable="true"
+            android:src="@drawable/chat_bot"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
     <!--드로어레이아웃-->
