--- a/app/src/main/res/layout/home_05.xml
+++ b/app/src/main/res/layout/home_05.xml
@@ -154,6 +154,19 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/chat_bot_button5"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/chat_bot_back"
+            android:padding="7dp"
+            android:clickable="true"
+            android:src="@drawable/chat_bot"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/home_05_RE"
             android:layout_width="0dp"
