--- a/app/src/main/res/layout/home_01_re.xml
+++ b/app/src/main/res/layout/home_01_re.xml
@@ -39,8 +39,8 @@
             android:text="1위"
             android:textAlignment="center"
             android:textAllCaps="false"
-            android:textSize="20sp"
-            android:textStyle="italic"
+            android:textSize="22sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/book_image_B"
             app:layout_constraintStart_toStartOf="parent" />
@@ -72,7 +72,7 @@
             android:maxLines="2"
             android:text="이국종"
             android:textAlignment="center"
-            android:textSize="13sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/book_date"
             app:layout_constraintEnd_toEndOf="@+id/book_name"
             app:layout_constraintHorizontal_bias="0.5"
@@ -87,7 +87,7 @@
             android:maxLines="1"
             android:text="2018.10.02"
             android:textAlignment="center"
-            android:textSize="13sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/book_name"
             app:layout_constraintHorizontal_bias="0.5"
