--- a/app/src/main/res/layout/sign_in_01.xml
+++ b/app/src/main/res/layout/sign_in_01.xml
@@ -9,10 +9,11 @@
         android:id="@+id/textView34"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/mybrary_00"
         android:text="MyBrary"
         android:textAlignment="center"
         android:textColor="@color/mybrary_main"
-        android:textSize="44sp"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:background="@color/mybrary_main"
         android:text="회원가입"
+        android:fontFamily="@font/mybrary_00"
         android:textColor="@android:color/background_light"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이미 어플리케이션 회원이신가요?"
+        android:fontFamily="@font/mybrary_00"
         app:layout_constraintBaseline_toBaselineOf="@+id/sign_in_01_sign_in_02_B"
         app:layout_constraintEnd_toStartOf="@+id/sign_in_01_sign_in_02_B"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
@@ -63,8 +66,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/trans"
+        android:fontFamily="@font/mybrary_00"
         android:text="로그인"
         android:textColor="@color/mybrary_main"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.5"
